<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>vavi</groupId>
  <artifactId>vavi-apps-hub</artifactId>
  <version>0.0.1-SNAPSHOT</version>

  <properties>
    <javapackager.name>Hub</javapackager.name>
    <javapackager.assetsDir>src/main/package</javapackager.assetsDir>
    <rococoa.version>0.8.5</rococoa.version>
  </properties>

  <profiles>
    <profile>
      <id>release</id>
      <activation>
        <os>
          <family>mac</family>
        </os>
      </activation>
      <properties>
        <installer>false</installer>
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>pl.project13.maven</groupId>
            <artifactId>git-commit-id-plugin</artifactId>
            <version>4.9.10</version>
            <executions>
              <execution>
                <id>get-the-git-infos</id>
                <goals>
                  <goal>revision</goal>
                </goals>
                <phase>initialize</phase>
              </execution>
            </executions>
            <configuration>
              <generateGitPropertiesFile>false</generateGitPropertiesFile>
              <includeOnlyProperties>
                <includeOnlyProperty>^git.build.(time|version)$</includeOnlyProperty>
              </includeOnlyProperties>
              <commitIdGenerationMode>full</commitIdGenerationMode>
            </configuration>
          </plugin>

          <plugin>
            <groupId>io.github.fvarrui</groupId>
            <artifactId>javapackager</artifactId>
            <version>1.7.0</version>
            <executions>
              <execution>
                <phase>package</phase>
                <goals>
                  <goal>package</goal>
                </goals>
                <configuration>
                  <name>${javapackager.name}</name>
                  <organizationName>Copyright © 2023 by vavi, All rights reserved.</organizationName>

                  <mainClass>vavi.apps.hub.Main</mainClass>
                  <runnableJar>${project.artifactId}-${project.version}.jar</runnableJar>
                  <generateInstaller>${installer}</generateInstaller>
                  <bundleJre>false</bundleJre>
                  <jreMinVersion>17</jreMinVersion>

                  <assetsDir>${javapackager.assetsDir}</assetsDir>

                  <additionalResources>
                    <additionalResource>${project.build.outputDirectory}/logging.properties</additionalResource>
                    <additionalResource>${project.build.testOutputDirectory}/librococoa.dylib</additionalResource>
                  </additionalResources>

                  <vmArgs>
                    <vmArg>--add-opens</vmArg>
                    <vmArg>java.desktop/com.apple.eawt=ALL-UNNAMED</vmArg>
                    <vmArg>--add-opens</vmArg>
                    <vmArg>java.base/java.lang=ALL-UNNAMED</vmArg>
                    <vmArg>-Djna.library.path=/usr/local/lib:.</vmArg>
                    <vmArg>-Dapple.laf.useScreenMenuBar=true</vmArg>
                    <vmArg>-Djava.util.logging.config.file=./logging.properties</vmArg>
                  </vmArgs>

                  <macConfig>
                    <!-- true cause error -->
                    <codesignApp>false</codesignApp>
                    <generatePkg>false</generatePkg>
                    <infoPlist>
                      <additionalEntries>
                        <![CDATA[
                      <key>CFBundleName</key>
                      <string>${javapackager.name}</string>
                      <key>CFBundleShortVersionString</key>
                      <string>${git.build.time}</string>
                    ]]>
                      </additionalEntries>
                    </infoPlist>
                  </macConfig>
                </configuration>
              </execution>
            </executions>
          </plugin>

          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-dependency-plugin</artifactId>
            <version>3.3.0</version>
            <executions>
              <execution>
                <id>copy</id>
                <phase>generate-resources</phase>
                <goals>
                  <goal>copy</goal>
                </goals>
                <configuration>
                  <artifactItems>
                    <artifactItem>
                      <groupId>org.rococoa</groupId>
                      <artifactId>rococoa-core</artifactId>
                      <type>dylib</type>
                      <overWrite>false</overWrite>
                      <outputDirectory>${project.build.testOutputDirectory}</outputDirectory>
                      <destFileName>librococoa.dylib</destFileName>
                    </artifactItem>
                  </artifactItems>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <source>17</source>
          <target>17</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M7</version>
        <configuration>
          <argLine>
            -Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties
          </argLine>
          <trimStackTrace>false</trimStackTrace>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
  </repositories>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.9.3</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.glassfish.jersey</groupId>
        <artifactId>jersey-bom</artifactId>
        <version>3.1.1</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>com.github.umjammer</groupId>
      <artifactId>vavi-commons</artifactId>
      <version>1.1.9</version>
    </dependency>

    <dependency>
      <groupId>jakarta.websocket</groupId>
      <artifactId>jakarta.websocket-api</artifactId>
      <version>2.0.0</version>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jetty.websocket</groupId>
      <artifactId>websocket-jakarta-server</artifactId>
      <version>11.0.15</version>
    </dependency>

    <dependency>
      <groupId>org.glassfish.jersey.containers</groupId>
      <artifactId>jersey-container-jetty-http</artifactId>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jersey.inject</groupId>
      <artifactId>jersey-hk2</artifactId>
    </dependency>

    <dependency>
      <groupId>vavi</groupId>
      <artifactId>vavi-script-apple</artifactId>
      <version>1.2.1</version>
    </dependency>

    <dependency>
      <groupId>org.rococoa</groupId>
      <artifactId>rococoa-core</artifactId>
      <version>${rococoa.version}</version>
    </dependency>
    <dependency>
      <groupId>org.rococoa</groupId>
      <artifactId>rococoa-contrib</artifactId>
      <version>${rococoa.version}</version>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-jdk14</artifactId>
      <version>2.0.3</version>
    </dependency>
    <dependency>
      <groupId>com.github.umjammer</groupId>
      <artifactId>vavi-util-logging-asl</artifactId>
      <version>0.0.2</version>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-commons</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
